cleaned assets folder

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                         <li>Adobe Photoshop, InDesign, Illustrator, Premiere Pro, Audition og XD</li>
                     </ul>
                 </div>
-                <img src="assets/portrait_2.jpg" alt="">
+                <img src="assets/portrait.jpg" alt="">
             </div>
             <section id="contact">
                 <h1></h1>
