--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
                         <li>WordPress frontend & backend</li>
                         <li>Adobe Photoshop, InDesign, Illustrator, Premiere Pro, Audition og XD</li>
                     </ul>
+                    <a href="assets/test.pdf" target="_blank" class="button"></a>
                 </div>
                 <img src="assets/portrait.jpg" alt="">
             </div>
@@ -145,7 +146,6 @@
         </section>
     </main>
     <script src="https://unpkg.com/scrollreveal"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/draggable/1.0.0-beta.9/draggable.min.js"></script>
     <script src="js/main.js"></script>
     <script src="js/reveal.js"></script>
 </body>
