--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     </ul>
                     <a href="assets/test.pdf" target="_blank" class="button"></a>
                 </div>
-                <img src="assets/portrait.jpg" alt="">
+                <img src="assets/portrait1.jpg" alt="">
             </div>
             <section id="contact">
                 <h1></h1>
