debugging and error fixes

--- a/index.html
+++ b/index.html
@@ -126,12 +126,12 @@
                     <p></p>
                     <p></p>
                     <ul>
-                        <li>HTML, SASS, JavaScript, JSON</li>
-                        <li>Git & Github</li>
-                        <li>WordPress frontend & backend</li>
-                        <li>Adobe Photoshop, InDesign, Illustrator, Premiere Pro, Audition og XD</li>
+                        <li>HTML5, SASS, JavaScript, JSON</li>
+                        <li>Git</li>
+                        <li>WordPress front- & backend</li>
+                        <li>Adobe Photoshop, InDesign,<br>Illustrator & XD</li>
                     </ul>
-                    <a href="assets/test.pdf" target="_blank" class="button"></a>
+                    <a href="" target="_blank" class="button"></a>
                 </div>
                 <img src="assets/portrait1.jpg" alt="">
             </div>
